--- a/Downloads/think-india-nitrr-website-Aditya/package.json
+++ b/Downloads/think-india-nitrr-website-Aditya/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gsap": "^3.12.5",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
